# recipes-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
api_well_practice/db/: __init__.py
api_well_practice/models/: __init__.py  category.py  recipe.py  tag.py  users.py
api_well_practice/utils/: _types.py
app/: logger_config.json  main.py
app/controller/: __init__.py  auth.py  base.py  category.py  recipe.py  tag.py
app/core/: __init__.py  events.py  settings.py
app/db/: __init__.py  db.py
app/db/dummy/: data.json
app/routers/: __init__.py  auth.py
app/routers/v1/: __init__.py  category.py  recipe.py  tag.py  user.py
app/schemas/: __init__.py  auth.py  base.py  categories.py  recipes.py  response.py  tags.py  user.py
app/utils/: __init__.py  _types.py
app/utils/exceptions/: __init__.py  common.py  handlers.py
tests/: conftest.py
tests/api/: test_category.py  test_tag.py
tests/client/: .env.example  categories.http  login.http  recipes.http  tags.http
