[project]
name = "api-well-practice"
version = "0.0.1"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["FastAPI", "Supabase", "Learning"]
authors = [{ email = "jequinterope@unal.edu.co" }]
readme = {file = "README.md", content-type = "text/markdown"}


[tool.poetry]
license = "MIT"
version = "0.0.1"
readme = "README.md"
name = "api-well-practice"
keywords = ["FastAPI", "Supabase"]
authors = ["Julio Quintero <jequinterope@unal.edu.co>"]
repository = "https://github.com/JPena-code/recipes-api"
description = "E-comerce API developed following the well practice of API."


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.108.0"
uvicorn = { version = "0.25.0", extras = ["standard"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
