[project]
name = "app"
version = "0.0.1"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["FastAPI", "Supabase", "Learning"]
authors = [{ email = "jequinterope@unal.edu.co" }]
readme = {file = "README.md", content-type = "text/markdown"}


[tool.poetry]
name = "app"
license = "MIT"
version = "0.0.1"
readme = "README.md"
keywords = ["FastAPI", "Supabase"]
authors = ["Julio Quintero <jequinterope@unal.edu.co>"]
repository = "https://github.com/JPena-code/recipes-api"
description = "E-comerce API developed following the well practice of API."


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = { version = "0.25.0", extras = ["standard"] }
supabase = "2.3.2"
pydantic-settings = "2.1.0"
pydantic = { version = "2.5.3", extras = ["email"] }
python-multipart = "0.0.6"
pyjwt = "2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
